integration_tests/codegen_fail/fail/union/derive_no_fields.stderr
error: GraphQL union expects at least one field
 --> $DIR/derive_no_fields.rs:2:1
  |
2 | enum Character {}
  | ^^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
